--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 </head>
 
 <body class="has-text-centered">
-  <nav class="navbar">
-
-  </nav>
   <section class="hero is-fullheight-with-navbar">
     <div class="hero-body">
       <div class="container">
         <img src="assets/img/covid19ScamsLogo.svg" alt="Covid19Scams">
-        <h2>
-        </h2>
+        <br>
+        <br>
+        <h3 class="title is-3">
+          During these unprecedented times scammers are taking full advantage of the vunerable. This forum is dedicated to bring awareness to the scams and scammers.
+        </h3>
+        <br>
+        <a href="#" class="button is-large is-link">Join the Forum</a>
       </div>
     </div>
     <div class="hero-foot footer">
       <h2>A not-for-profit project by <a href="https://thameswilliams.com" target="_blank">Thames Williams.</a>
+        <br>Helpling Individuals and Small Businesses
       </h2>
     </div>
 
