--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           During these unprecedented times scammers are taking full advantage of the vunerable. This forum is dedicated to bring awareness to the scams and scammers.
         </h3>
         <br>
-        <a href="#" class="button is-large is-link">Join the Forum</a>
+        <a href="https://forum.covid19scams.co.uk/" class="button is-large is-link">Join the Forum</a>
       </div>
     </div>
     <div class="hero-foot footer">
