--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Covid19 Scams | Help the Vunerable from Scammers</title>
+  <title>Covid19 Scams | Help the Vulnerable from Scammers</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
 </head>
@@ -17,8 +17,7 @@
         <br>
         <br>
         <h3 class="title is-3">
-          During these unprecedented times scammers are taking full advantage of the vunerable. This forum is dedicated to bring awareness to the scams and scammers.
-        </h3>
+          During these unprecedented times, scammers are taking full advantage of the vulnerable. This forum is dedicated to bringing awareness to the scams and scammers.        </h3>
         <br>
         <a href="https://forum.covid19scams.co.uk/" class="button is-large is-link">Join the Forum</a>
       </div>
